2021-06-24  Jer Noble  <jer.noble@apple.com>

        Loading WebM hangs if server sends only small amount of data
        https://bugs.webkit.org/show_bug.cgi?id=226217
        <rdar://problem/78709010>

        Reviewed by Eric Carlson.

        * http/tests/media/resources/.htaccess: Added.
        * http/tests/media/video-webm-stall-expected.txt: Added.
        * http/tests/media/video-webm-stall.html: Added.

2021-06-29  Yoshiaki Jitsukawa  <yoshiaki.jitsukawa@sony.com>

        P-384 EC public JWK key in layout tests is wrong
        https://bugs.webkit.org/show_bug.cgi?id=227432

        Reviewed by Chris Dumez.

        Fix the y value of the JWK keys. The y value was derived from the x value with openssl,
        using EC_POINT_set_compressed_coordinates_GFp() and EC_POINT_get_affine_coordinates_GFp(),
        and was verified with EC_KEY_check_key().

        * crypto/subtle/ec-import-key-malformed-parameters.html:
        * crypto/subtle/ecdh-import-jwk-public-key-p384.html:
        * crypto/subtle/ecdsa-import-jwk-public-key-alg-384.html:
        * crypto/workers/subtle/resources/ec-import-jwk-key-public.js:

2021-06-29  Rob Buis  <rbuis@igalia.com>

        Nullptr crash in HTMLStackItem::create via DocumentFragment::parseHTML
        https://bugs.webkit.org/show_bug.cgi?id=227390

        Reviewed by Ryosuke Niwa.

        Add test for this.

        * editing/pasteboard/paste-create-fragment-crash-expected.txt: Added.
        * editing/pasteboard/paste-create-fragment-crash.html: Added.

2021-06-29  Rob Buis  <rbuis@igalia.com>

        Crash in SharedBuffer::data
        https://bugs.webkit.org/show_bug.cgi?id=227173

        Reviewed by Ryosuke Niwa.

        * fast/xsl/xslt-transformToDocument-crash-expected.txt: Added.
        * fast/xsl/xslt-transformToDocument-crash.html: Added.

2021-06-29  Martin Robinson  <mrobinson@igalia.com>

        CSS scroll snap should allow scrolling to the middle of snap areas that overflow the snapport