@@ -1217,9 +1217,6 @@ webkit.org/b/171985 [ Release ] workers/bomb.html [ Pass Timeout ]
 
 webkit.org/b/175939 [ Debug ] editing/execCommand/forward-delete-read-write-canvas.html [ Skip ]
 
-# <rdar://problem/32826391>
-imported/w3c/web-platform-tests/xhr/setrequestheader-content-type.htm [ Failure ]
-
 webkit.org/b/173608 webrtc/video-replace-muted-track.html [ Skip ]
 
 webkit.org/b/187388 animations/needs-layout.html [ Pass ImageOnlyFailure ]
