@@ -26,8 +26,8 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-// FIXME: Add URLSearchParams and ReadableStream to the union when supported.
-typedef (Blob or BufferSource or DOMFormData or USVString) BodyInit;
+// FIXME: Add ReadableStream to the union when supported.
+typedef (Blob or BufferSource or DOMFormData or USVString or URLSearchParams) BodyInit;
 
 enum XMLHttpRequestResponseType {
     "",
